objects/Interview__c.object
<CustomObject>
    <label>Interview</label>
    <nameField>
        <displayFormat>Interview-{0000}</displayFormat>
        <label>Interview ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_MAIL__c</fullName>
        <label>E-MAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Disqualify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <label>Technologies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Interview__c</fullName>
        <label>Type Of Interview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Of_Interview__c</fullName>
        <label>Phase Of Interview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level-1 :Written</fullName>
                </value>
                <value>
                    <fullName>Level-2: Practical</fullName>
                </value>
                <value>
                    <fullName>Level-3: Interview</fullName>
                </value>
                <value>
                    <fullName>Level-4: Document Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Date_Time__c</fullName>
        <label>Schedule Date Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>